# SubstrateMC

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  java.json  minecraft.json
crates/core/: Cargo.toml
crates/core/src/: check_java.rs  console.rs  download.rs  download_java.rs  download_server.rs  lib.rs  pseudo.txt  remove_server.rs  rename.rs  server.rs  unpack.rs  upload_mod.rs
crates/core/src/download/: check_eula.rs  download_helper.rs  download_java.rs  download_server.rs  mod.rs
crates/core/src/download/installer/: mod.rs  server_installer.rs
crates/core/src/errors/: api_error.rs  error.rs
crates/core/src/ffi/: create_server.rs
crates/substrate-core/: Cargo.toml
crates/substrate-core/src/: check_java.rs  console.rs  lib.rs  rename.rs  server.rs  server_handler.rs  unpack.rs
crates/substrate-core/src/download/: download_java.rs  mod.rs
crates/substrate-core/src/download/server/: download_server.rs  mod.rs
crates/substrate-core/src/download/server/installer/: create_script.rs  mod.rs  server_installer.rs
crates/substrate-core/src/download/server/installer/loader/: mod.rs  vanilla.rs
crates/substrate-core/src/errors/: error.rs
docs/: installation.md
docs/api/: create_server.md  delete_server.md  web_socket.md
src/: check_java.rs  delete_server.rs  download.rs  download_java.rs  download_server.rs  get_config.rs  indices.rs  main.rs  save_config.rs  server.rs  server_handler.rs  unpack.rs
src/api/: control_msg.rs  create_server.rs  delete_server.rs  mod.rs  open_socket.rs  remove_server.rs  socket_control.rs  view_servers.rs
src/errors/: error.rs
tests/: create_server_test.rs  get_output_test.rs  run_server_test.rs
