[package]
name = "substrate-mc"
version = "0.1.0"
edition = "2024"

[features]
default = ["logging"]
logging = [
    "dep:tracing",
    "dep:tracing-subscriber",
]

[dependencies]
actix-web = { version = "4.12.1", default-features = false, features = ["macros"] }
actix-ws = "0.3.1"
tokio = { version = "1.49.0", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "sync",
    "fs",
    "process"
] }

reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls"] }


tar = { version = "0.4.44" }
flate2 = { version = "1.1.8", default-features = false, features = [
    "rust_backend",
] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }


serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
once_cell = "1.21.3"
rmp-serde = { version = "1.3.1" }
futures-util = "0.3.31"

tracing = { version = "0.1.44", optional = true }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"], optional = true }

[profile.release]
codegen-units = 1
lto = "fat"
strip = true

[profile.release-size]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
debug = false
incremental = false

[profile.release-speed]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
strip = false
debug = false
incremental = false
overflow-checks = false
