[package]
name = "substrate-mc"
version = "0.1.0"
edition = "2024"

[features]
default = ["logging"]
logging = [
    "dep:tracing",
    "dep:tracing-subscriber",
]

[workspace]
members = [
    "crates/substrate-core",
]

[dev-dependencies]
tempfile = "3.27.0"

[dependencies]
substrate-core = { path = "crates/substrate-core", features = ["actix-web", "logging", "postcard"] }
tokio = { version = "1.49.0", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "sync",
    "fs",
    "process"
] }

postcard = { version = "1.1.3", features = ["use-std"] }

actix-web = { version = "4.12.1", default-features = false, features = ["macros"] }
actix-ws = "0.3.1"

futures-util = "0.3.31"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

tracing = { version = "0.1.44", optional = true }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"], optional = true }
