[package]
name = "substrate-core"
version = "0.1.0"
edition = "2024"

[features]
default = ["logging"]
logging = [
    "dep:tracing",
    "dep:tracing-subscriber",
]

[dependencies]
once_cell = { version = "1.21.3" }
reqwest = "0.13.2"

tracing = { version = "0.1.44", optional = true }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"], optional = true }

tokio = { version = "1.49.0", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "sync",
    "fs",
    "process"
] }

tar = { version = "0.4.44" }
flate2 = { version = "1.1.8", default-features = false, features = [
    "rust_backend",
] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
incremental = false
overflow-checks = false
